Card wrap container fixing

--- a/src/App.css
+++ b/src/App.css
@@ -201,36 +201,24 @@ section:nth-child(1){
   padding: 5%;
 }
 .cardsContainer{
+
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
-  height: 100%;
-  width: 100%;
-  gap: 50px;
+  gap: 3em;
 }
-.row{
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 
-  align-items: center;
 
-}
-.row:nth-child(2){
-  justify-content: space-evenly;
-}
 .card{
-  height: 270px;
-  width: 270px;
+  height: 325px;
+  width: 325px;
   border:3px solid var(--btn-color);
   border-radius: 16px;
   color: var(--btn-color);
   padding: 30px;
   line-height: 25px;
+  font-size: 1em;
 }
 .card h2{
   height: 20%;
